Add simple global lock impl