@@ -1,9 +1,9 @@
-Runner.GlobalLock  = time - 5, cells - 64, particles - 8, transitions - 46624698
-Runner.LockPerCell = time - 5, cells - 64, particles - 8, transitions - 66994826
-Runner.NoLocking   = time - 5, cells - 64, particles - 8, transitions - 26645663
+How to enable preview features in IDEA:
+https://hanno.codes/2023/07/16/configuring-intellij-idea-to-try-out-javas-preview-features/#:~:text=per%2Dmodule%20basis.-,Enabling%20Preview%20Features%20Per%2DModule,compiler%20parameters%20per%2Dmodule'.
 
-
-SimpleGlobalLock   = time - 5, cells - 64, particles - 8, transitions - 80783360
-SimpleLockPerCell  = time - 5, cells - 64, particles - 8, transitions - 144040270
-CopyArray          = time - 5, cells - 64, particles - 8, transitions - 703947706
-SingleThread       = time - 5, cells - 64, particles - 8, transitions - 211050706
+In Gradle
+```groovy
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+```
